fixed menu rendering
and fixed DrawTiledImageRect bug that f'd up source dimensions

--- a/options.ini
+++ b/options.ini
@@ -1,6 +1,6 @@
 [options]
-width = 1280
-height = 720
+width = 1920
+height = 1080
 fullscreen = false
 borderless windowed = false
 gfx driver = 2
@@ -56,7 +56,7 @@ Console key = 61
 [launcher]
 launcher width = 640
 launcher height = 480
-launcher enabled = true
+launcher enabled = false
 
 [console]
 enabled = 0
