re-enable launcher

--- a/options.ini
+++ b/options.ini
@@ -9,7 +9,7 @@ brightness = 50
 screengamma = 1.0
 show FPS = 0
 framelimit = 0
-vsync = 1
+vsync = 0
 mouse sensitivity = 0.0
 invert mouse y = 0
 mouse smoothing = 1.0
@@ -56,7 +56,7 @@ Console key = 61
 [launcher]
 launcher width = 640
 launcher height = 480
-launcher enabled = false
+launcher enabled = true
 
 [console]
 enabled = 0
