--- a/options.ini
+++ b/options.ini
@@ -12,7 +12,7 @@ framelimit = 0
 vsync = 0
 mouse sensitivity = 0.0
 invert mouse y = 0
-mouse smoothing = 1.0
+mouse smoothing = 0.0
 camera fog near = 0.5
 camera fog far = 6.0
 fog r = 0
@@ -31,7 +31,7 @@ texture details = 3
 antialiased text = 0
 particle amount = 2
 enable vram = 0
-check for updates = true
+check for updates = false
 play startup video = true
 
 [audio]
